2004-08-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_spawn.c: Change the parent of GLib::Spawn*Error to 
	StandardError from SystemCallError.
	Added GLib::Spawn#async_with_pipes, #async, #sync.
	Make uniform of the return values of GLib::Spawn#command_line_sync
	to #sync.

2004-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h, glib2.def: Export rbglib_spawn_error() 
	for Gdk::Screen#spawn_on_screen.
	Increment version.

2004-07-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.c: setlocale parameter was changed. 
	LC_CTYPE and LC_MESSAGES are set not LC_ALL.

2004-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* tests/test-glib2.rb: Removed ^M. Pointed out by Laurent Sansonetti.
	* src/rbglib.c: Version informations use variables not macros. 
	Added GLib::INTERFACE_AGE, GLib::BINARY_AGE.
	Pointed out by Jeremy Henty

2004-05-21  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h. glib2.def: Fixed a problem with rbg_cstr2rval_with_free
	reported by Joao Pedrosa.

2004-05-16  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.c (rbgobj_define_property_accessor): Supports 
	interface properties (Since 2.4).
	* src/rbgobj_type.c (rbgobj_init_interface): ditto. 

2004-05-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.[ch]: Add CSTR2RVAL2 which free given char* area. 

2004-05-05  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbglib_spawn.c: Fixed a memory overflow bug in the
	  spawn_error table.
 
2004-05-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_spawn.c: Fix an initial error on some platforms 
	to restrict errno to exist the environment. 
	Reported by Laurent Sansonetti.
	
2004-04-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/utils.rb: Add a sample.
	* src/rbglib_utils.c: Add/Modify some methods.
	* src/lib/glib2.rb: Fix a bug which GLib.__add_one_arg_setter(klass) 
	doen't work for module function and moved from src/rbgutil.c.

2004-04-30  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbglib_utils.c: Added.